syntax = "proto3";
package proto;

option go_package = "./proto";

message HunterTalents {
	// Beast Mastery
	int32 improved_aspect_of_the_hawk = 1;
	int32 endurance_training = 2;
	int32 focused_fire = 3;
	int32 unleashed_fury = 4;
	int32 ferocity = 5;
	int32 bestial_discipline = 6;
	int32 frenzy = 7;
	int32 ferocious_inspiration = 8;
	bool bestial_wrath = 9;
	int32 serpents_swiftness = 10;
	bool the_beast_within = 11;

	// Marksmanship
	int32 lethal_shots = 12;
	int32 improved_hunters_mark = 13;
	int32 efficiency = 14;
	int32 go_for_the_throat = 15;
	int32 improved_arcane_shot = 16;
	bool aimed_shot = 17;
	int32 rapid_killing = 18;
	int32 improved_stings = 19;
	int32 mortal_shots = 20;
	bool scatter_shot = 21;
	int32 barrage = 22;
	int32 combat_experience = 23;
	int32 ranged_weapon_specialization = 24;
	int32 careful_aim = 25;
	bool trueshot_aura = 26;
	int32 improved_barrage = 27;
	int32 master_marksman = 28;
	bool silencing_shot = 29;

	// Survival
	int32 monster_slaying = 30;
	int32 humanoid_slaying = 31;
	int32 savage_strikes = 32;
	int32 clever_traps = 33;
	int32 survivalist = 34;
	int32 trap_mastery = 35;
	int32 surefooted = 36;
	int32 survival_insticts = 37;
	int32 killer_instinct = 38;
	int32 resourcefulness = 39;
	int32 lightning_reflexes = 40;
	int32 thrill_of_the_hunt = 41;
	int32 expose_weakness = 42;
	int32 master_tactician = 43;
	bool readiness = 44;
}

message Hunter {
    message Rotation {
    }
    Rotation rotation = 1;

    HunterTalents talents = 2;
    
    message Options {
    }
    Options options = 3;
}
